fixed text visibility on the search button

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
 }
 
 .search-input, .search-button {
+  color: white;
   padding: .8rem;
   background: rgba( 0, 0, 0, 0.05 );
   backdrop-filter: blur( 6px );
